feat: add customize context template
